lib_LTLIBRARIES = libwiringPiDev.la
libwiringPiDev_la_SOURCES = ds1302.c maxdetect.c piNes.c gertboard.c piFace.c lcd128x64.c lcd.c scrollPhat.c piGlow.c ds1302.h gertboard.h lcd128x64.h lcd.h maxdetect.h piFace.h piGlow.h piNes.h scrollPhat.h
libwiringPiDev_la_CPPFLAGS = -Wall -Wextra -I. -I../wiringPi -pthread
libwiringPiDev_ladir = ${libdir}
